tests/Rules/Anchor/Fixtures/valid/link_with_inner_text.html.twig
<html>
  <body>
    <a href="/foo">Home</a>
  </body>
</html>
