tests/Rules/Anchor/Fixtures/invalid/link_without_name.html.twig
{# 1 errors #}
<html>
  <body>
    <a href="/foo"></a>
  </body>
</html>
